# TheCamlBeforeTheStorm

./: .gitmodules  README.md
.github/workflows/: update-submodule.yml
cli/: .gitignore  Makefile  hello  hello.ml
cli/wordfreq/: dune-project
cli/wordfreq/lib/: dune
cli/wordfreq/test/: dune
donutworry/: Makefile  donut  donut.ml
ocamlfga/ocamlfga/: dune-project  ocamlfga.opam
ocamlfga/ocamlfga/lib/: check.ml  dune  ocamlfga.ml  ocamlfga.mli  openfga.ml  types.ml
ocamlfga/ocamlfga/test/: dune  test_ocamlfga.ml
ray_tracer/: README.md  dune-project  integration_test.sh  test_render.ml
ray_tracer/lib/: dune  raytracer.ml
ray_tracer/test/: dune  test_ascii.ml  test_raytracer.ml
seeeff/: driver.ml
seeeff/problemset/: topc.ml
stockmock/: dune  dune-project  main.ml  stockmock.opam
tuibirbs/: main.ml
tuibirbs/tuibirbs/: dune-project
tuibirbs/tuibirbs/lib/: dune
tuibirbs/tuibirbs/test/: dune
