(lang dune 3.17)

(name ocamlfga)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocamlfga)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  (ocaml (>= 4.08.0))
  (dune (>= 3.17))
  yojson
  lwt
  ppx_deriving_yojson
  cohttp
  cohttp-lwt
  cohttp-lwt-unix)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
