(lang dune 3.19)

(name tuibirbs)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anurag Bandyopadhyay <angbpy@gmail.com>")

(maintainers "Anurag Bandyopadhyay <angbpy@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name tuibirbs)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
